# oif

./: .gitignore  .ocamlformat  .pre-commit-config.yaml  OMakefile  OMakeroot  README.md  dune  dune-project  oif.opam
lib/: candidate.ml  candidate.mli  candidate_array.ml  candidate_array.mli  candidate_reader.ml  dune  filter.ml  filter.mli  filter_intf.ml  line.ml  line.mli  match_result.ml  match_result.mli  matcher.ml  matcher.mli  new_matcher.ml  new_matcher.mli  range.ml  range.mli  std.ml  timestamp.ml  timestamp.mli  timestamp_recorder.ml  timestamp_recorder.mli  ustring.ml  ustring.mli  vector.ml  vector.mli  virtual_window.ml  virtual_window.mli
misc/: delayed-output.mjs
src/: OMakefile  candidate_selector.ml  candidate_selector.mli  candidate_style.ml  candidate_style.mli  const.ml  dune  event_hub.ml  event_hub.mli  events.ml  events.mli  filter.ml  filter.mli  filter_intf.ml  index_coordinator.ml  index_coordinator.mli  item_marker.ml  item_marker.mli  line_separated_reader.ml  line_separated_reader.mli  main.ml  main_widget.ml  main_widget.mli  matcher.ml  migemo_filter.ml  migemo_filter.mli  partial_match_filter.ml  partial_match_filter.mli  read_line.ml  renderer.ml  std.ml  text_match.ml  types.ml  widget_candidate_box.ml  widget_candidate_box.mli  widget_information_line.ml  widget_information_line.mli  widget_main.ml  widget_main.mli  widget_read_line.ml  (+1 more)
test/: candidate_selector_test.ml  dune  event_hub_test.ml  events_test.ml  index_coodinator_test.ml  index_coordinator_test.ml  line_separated_reader_test.ml  line_test.ml  oif_lib_tests.ml  (+4 more)
(+15 files in other folders)
